add ooperations api.
